fixed ration and chat container width, fixed header searchbar/alignment

--- a/dabubble/src/app/components/general-view/chat/chat.component.scss
+++ b/dabubble/src/app/components/general-view/chat/chat.component.scss
@@ -3,6 +3,7 @@
 section {
     background-color: white;
     border-radius: 30px;
+    height: calc(100vh - 130px);
 }
 
 header {
