--- a/dabubble/src/app/components/general-view/general-view.component.scss
+++ b/dabubble/src/app/components/general-view/general-view.component.scss
@@ -17,3 +17,7 @@ app-workspace-menu-close-button {
     bottom: 127px;
     z-index: 1;
 }
+
+app-chat {
+    width: 100%;
+}
