--- a/dabubble/src/app/components/general-view/header/header.component.scss
+++ b/dabubble/src/app/components/general-view/header/header.component.scss
@@ -8,10 +8,9 @@
 header {
     padding: 25px 34px 20px 45px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 70px;
-    gap: 120px;
+    gap: 220px;
 }
 
 .header-logo {
@@ -29,12 +28,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    gap: 6vw;
 }
 
 .searchbar {
     background-color: white;
-    margin-left: 50px;
-    width: 989px;
+    min-width: 560px; //eventuell anpassen
 
     >input {
         font-size: 24px;
@@ -66,6 +66,9 @@ header {
     >span {
         font-weight: 700;
         font-size: 32px;
+        width: max-content;
+        max-width: 250px;
+        overflow: hidden;
     }
 
     >img {
